Updated the Login, Location Request, Response DTOs, LocationService and DashboardController